--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
   "code-runner.executorMap": {
     "c": "gcc -o $fileNameWithoutExt -g $fileName && $dir$fileNameWithoutExt",
-    "cpp": "g++ -o $fileNameWithoutExt.exe -Wall -Wextra -pedantic -std=c++17 -O2 -Wshadow -Wformat=2 -Wfloat-equal -Wconversion -Wlogical-op -Wshift-overflow=2 -Wduplicated-cond -Wcast-qual -Wcast-align -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -fsanitize=address -fsanitize=undefined -fno-sanitize-recover -fstack-protector -g $fileName && ./$fileNameWithoutExt.exe < $fileNameWithoutExt.inp > $fileNameWithoutExt.out && diff $fileNameWithoutExt.out $fileNameWithoutExt.sout",
-    "python": "python -u $fileName < $fileNameWithoutExt.inp > $fileNameWithoutExt.out && diff $fileNameWithoutExt.out $fileNameWithoutExt.sout"
+    //  Bash version
+    // "cpp": "g++ $fileName -o $fileNameWithoutExt.exe -Wall -Wextra -pedantic -std=c++17 -O2 -Wshadow -Wformat=2 -Wfloat-equal -Wconversion -Wlogical-op -Wshift-overflow=2 -Wduplicated-cond -Wcast-qual -Wcast-align -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -fsanitize=address -fsanitize=undefined -fno-sanitize-recover -fstack-protector && ./$fileNameWithoutExt.exe < $fileNameWithoutExt.inp > $fileNameWithoutExt.out && diff $fileNameWithoutExt.out $fileNameWithoutExt.sout",
+    // "python": "python -u $fileName < $fileNameWithoutExt.inp > $fileNameWithoutExt.out && diff $fileNameWithoutExt.out $fileNameWithoutExt.sout",
+    // Powershell version
+    "cpp": "g++ $fileName -o $fileNameWithoutExt.exe -Wall -Wextra -pedantic -std=c++17 -O2 -Wshadow -Wformat=2 -Wfloat-equal -Wconversion -Wlogical-op -Wshift-overflow=2 -Wduplicated-cond -Wcast-qual -Wcast-align -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -D_FORTIFY_SOURCE=2 -fno-sanitize-recover -fstack-protector && Get-Content $fileNameWithoutExt.inp | ./$fileNameWithoutExt.exe > $fileNameWithoutExt.out && Compare-Object (Get-Content $fileNameWithoutExt.out) (Get-Content $fileNameWithoutExt.sout)",
+    "python": "Get-Content $fileNameWithoutExt.inp | python -u $fileName > $fileNameWithoutExt.out && Compare-Object (Get-Content $fileNameWithoutExt.out) (Get-Content $fileNameWithoutExt.sout)"
   },
   "files.associations": {
     "iostream": "cpp",
